# notification-examples

./: README.md
.github/workflows/: export_github_data.yml  labels.yml  ossf-scorecard.yml  s3-backup.yml
dotnet/: .gitignore  NotifyDemo.sln
dotnet/.devcontainer/: devcontainer.json
dotnet/NotifyDemo/: NotifyDemo.csproj  Program.cs
python/: Summary.md  get_status_many.py  pyproject.toml  send_email.py  send_many_emails.py
python/.devcontainer/: Dockerfile
